--- a/_toc.yml
+++ b/_toc.yml
@@ -4,6 +4,7 @@
 format: jb-book
 root: intro
 chapters:
-- file: markdown
-- file: notebooks
-- file: markdown-notebooks
+- file: overview
+- file: optical-design
+- file: light-sources
+- file: signal-control
