--- a/_toc.yml
+++ b/_toc.yml
@@ -3,8 +3,10 @@
 
 format: jb-book
 root: intro
-chapters:
-- file: overview
-- file: optical-design
-- file: light-sources
-- file: signal-control
+parts:
+- caption: Basics of a custom microscope
+  chapters:
+  - file: chapters/1-basics/overview
+  - file: chapters/1-basics/optical-design
+  - file: chapters/1-basics/light-sources
+  - file: chapters/1-basics/signal-control
