--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,10 @@ title: Full-Stack Microscopy Handbook
 author: andrey andreev
 logo: logo.png
 
+exclude_patterns     : [_build, Thumbs.db, .DS_Store, "jupyter-book"]
+only_build_toc_files : true
+
+
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
 execute:
