--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,9 @@
 # Learn more at https://jupyterbook.org/customize/config.html
 
 title: Full-Stack Microscopy Handbook
-author: andrey andreev
+author: Andrey Andreev
 logo: logo.png
+copyright : "2024" # Copyright year to be placed in the footer
 
 exclude_patterns     : [_build, Thumbs.db, .DS_Store, "jupyter-book"]
 only_build_toc_files : true
