--- a/_toc.yml
+++ b/_toc.yml
@@ -30,6 +30,7 @@ parts:
     - file: chapters/4-control/ascii-commands
     - file: chapters/4-control/signal-generation
     - file: chapters/4-control/signal-action-delay
+    - file: chapters/4-control/example-code
 
 - caption: Data management and analysis
   chapters:
