--- a/_toc.yml
+++ b/_toc.yml
@@ -11,6 +11,7 @@ parts:
   - file: chapters/1-basics/light-sources
   - file: chapters/1-basics/detection
   - file: chapters/1-basics/hardware-design
+  - file: chapters/1-basics/alignment-debugging
   - file: chapters/1-basics/how-to-ask-for-help
 
 - caption: Fluorescence
